# cookiecutter-ansible-collection

./: .gitignore  pyproject.toml  requirements-dev.txt
hooks/: post_gen_project.sh
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/: pyproject.toml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/.github/: settings.yml
